added global reset and pacman animation for menu

--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -1,6 +1,9 @@
 .app {
+    background: #000;
+    color: #fff;
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
+    min-height: 100vh;
     p {
         font-family: 'Source Code Pro', monospace;
         font-weight: 400;
