--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -17,4 +17,13 @@
         font-family: 'Syncopate', monospace;
         text-transform: uppercase;
     }
+    // .video {
+    //     position: fixed;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     object-fit: cover;
+    //     z-index: -1;
+    //   }
 }
