added second lottie animation

--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -1,5 +1,6 @@
 .app {
     background: #000;
+    background: linear-gradient(115deg, #19181d 0%, #0f4e52 100%);
     color: #fff;
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
