--- a/styles/components/Layout.module.scss
+++ b/styles/components/Layout.module.scss
@@ -71,4 +71,12 @@
     transition: opacity 500ms;
   }
 
-  
+  .container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+  }
