--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,57 +1,112 @@
-.nav {
-    a span {
-        color: #4aaff9;
+.header {
+  display: flex;
+  position: fixed;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: #081496;
+
+  nav {
+    ul.navul {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+
+      li {
+        margin: 0 10px;
+        font-size: 18px;
+
+        .navLink {
+          position: relative;
+          padding: 10px;
+          color: #fff;
+          cursor: pointer;
+          transition: color 0.2s ease;
+
+          &.current {
+            color: #ff288d;
+          }
+        }
+      }
     }
-    a span.current {
-        color: #ff288d;
+  }
+
+  .pacman {
+    position: absolute;
+    top: 10px;
+    height: 80px;
+    width: 80px;
+    transition: left 0.2s ease;
+
+    &.right {
+      left: 0;
     }
+
+    &.left {
+      right: 0;
+    }
+
+    &.center {
+      display: none;
+    }
+  }
+
+  .pacmantop {
+    background-color: #ff288d;
+    height: 40px;
+    width: 80px;
+    border-radius: 42px 42px 0 0;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+
+  .pacmanbottom {
+    background-color: #ff288d;
+    height: 40px;
+    width: 80px;
+    border-radius: 0 0 42px 42px;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+
+  .pacmanleft .pacmantop {
+    animation-name: spin2;
+  }
+
+  .pacmanleft .pacmanbottom {
+    animation-name: spin1;
+  }
+
+  .pacmanright .pacmantop {
+    animation-name: spin1;
+  }
+
+  .pacmanright .pacmanbottom {
+    animation-name: spin2;
+  }
 }
 
-.pacmantop{
-    background-color: #ff288d;
-    height:50px;
-    width:100px;
-    border-radius:50px 50px 0 0;
-    animation: spin1 0.5s infinite linear;
+@keyframes spin1 {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .pacmanbottom{
-  background-color: #ff288d;
-    height:50px;
-    width:100px;
-    border-radius:0 0 50px 50px;
-    animation: spin2 0.5s infinite linear;
+  50% {
+    transform: rotate(-35deg);
   }
-  
-  /* Animation*/
-  
-  @keyframes spin1 {
-      0%  {transform: rotate(0deg);}
-      50%{transform: rotate(-35deg);}
-    
+}
+
+@keyframes spin2 {
+  0% {
+    transform: rotate(0deg);
   }
-  @keyframes spin2 {
-      0%  {transform: rotate(0deg);}
-    50%{transform: rotate(35deg);}	
+  50% {
+    transform: rotate(35deg);
   }
-  
-  @-moz-keyframes spin1 {
-      0%  {transform: rotate(0deg);}
-      50%{transform: rotate(-35deg);}
-    
-  }
-  @-moz-keyframes spin2 {
-      0%  {transform: rotate(0deg);}
-    50%{transform: rotate(35deg);}	
-  }
-  @-webkit-keyframes spin1 {
-      0%  {transform: rotate(0deg);}
-      50%{transform: rotate(-35deg);}
-    
-  }
-  @-webkit-keyframes spin2 {
-      0%  {transform: rotate(0deg);}
-    50%{transform: rotate(35deg);}
-  }
-  
-  
+}
