added nav icons

--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -27,7 +27,8 @@
           color: #fff;
           cursor: pointer;
           transition: color 0.2s ease;
-
+          text-transform: uppercase;
+          letter-spacing: .2em;
           &.current {
             color: #ff288d;
           }
@@ -41,7 +42,7 @@
     top: 10px;
     height: 80px;
     width: 80px;
-    transition: left 0.2s ease;
+    transition: opacity 0.2s ease, left 0.2s ease;
 
     &.right {
       left: 0;
