--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -1,7 +1,7 @@
 .app {
-    background: #000;
-    background: linear-gradient(115deg, #19181d 0%, #0f4e52 100%);
-    color: #fff;
+    background: #fff;
+    // background: linear-gradient(115deg, #19181d 0%, #0f4e52 100%);
+    color: #000;
     font-family: 'Source Code Pro', monospace;
     font-weight: 400;
     min-height: 100vh;
@@ -17,6 +17,34 @@
     h1, h2 {
         font-family: 'Syncopate', monospace;
         text-transform: uppercase;
+    }
+    h1 {
+        font-size: 6rem;
+        font-weight: 800;
+        margin: 0;
+    }
+    h2 {
+        font-size: 5rem;
+        font-weight: 800;
+        margin: 0;
+    }
+    h3 {
+        font-size: 1.5rem;
+        font-weight: 800;
+        margin: 0;
+    }
+    h4 {
+        font-size: 1.25rem;
+        font-weight: 800;
+        margin: 0;
+    }
+    h5 {
+        font-size: 1rem;
+        font-weight: 800;
+        margin: 0;
+    }
+    p {
+        font-size: 2rem;
     }
     // .video {
     //     position: fixed;
