--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -5,10 +5,11 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 80px;
-  background: #081496;
+  height: 60px;
+  background: #000;
 
   nav {
+    margin: 0 auto;
     ul.navul {
       display: flex;
       align-items: center;
@@ -19,11 +20,40 @@
 
       li {
         margin: 0 10px;
-        font-size: 18px;
-
+        font-size: 12px;
+        font-family: 'Syncopate', monospace;
+        text-transform: uppercase;
+        font-weight: 800;
+        // position: relative;
+        .iconcontainer {
+          &::before {
+            content: "";
+            background: #fff;
+            width: 50px;
+            height: 50px;
+            display: block;
+            border-radius: 50%;
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          position: relative;
+          top: -25px;
+          // background: #fff;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          margin: 0 auto;
+          svg {
+            z-index: 4;
+          }
+          z-index: 4;
+        }
         .navLink {
           position: relative;
-          padding: 10px;
+          top: -15px;
+          padding: 0px 10px;
           color: #fff;
           cursor: pointer;
           transition: color 0.2s ease;
@@ -37,13 +67,29 @@
     }
   }
 
+  .logo {
+    color: #fff;
+    position: absolute;
+    top: 18px;
+    left: 50px;
+    font-size: 18px;
+    font-weight: 800;
+    .red { color: red }
+    .blue { color: blue }
+    .green { color: green }
+    .yellow { color: yellow }
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+      
+  }
   .pacman {
     position: absolute;
-    top: 10px;
-    height: 80px;
-    width: 80px;
-    transition: opacity 0.2s ease, left 0.2s ease;
-
+    top: -25px;
+    height: 50px;
+    width: 50px;
+    transition: opacity 0.2s ease, left 0.5s ease;
+    z-index: 4;
     &.right {
       left: 0;
     }
@@ -58,20 +104,20 @@
   }
 
   .pacmantop {
-    background-color: #ff288d;
-    height: 40px;
-    width: 80px;
-    border-radius: 42px 42px 0 0;
+    background-color: yellow;
+    height: 25px;
+    width: 50px;
+    border-radius: 27px 27px 0 0;
     animation-duration: 0.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
 
   .pacmanbottom {
-    background-color: #ff288d;
-    height: 40px;
-    width: 80px;
-    border-radius: 0 0 42px 42px;
+    background-color: yellow;
+    height: 25px;
+    width: 50px;
+    border-radius: 0 0 27px 27px;
     animation-duration: 0.5s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
