basic resume styles, basic home page

--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -60,7 +60,7 @@
           text-transform: uppercase;
           letter-spacing: .2em;
           &.current {
-            color: #ff288d;
+            color: yellow;
           }
         }
       }
