--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -39,6 +39,14 @@
     }
   }
 
+  .lines {
+    position: absolute;
+    top: -120px;
+    z-index: 0;
+    right: 100px;
+    height: 600px;
+  }
+
 .heroimg {
     position: relative;
     &::before{
@@ -58,7 +66,7 @@
     &::after{
         content: "+++";
         position: absolute;
-        top: -20px;
+        bottom: 120px;
         left: -30px;
         font-size: 48px;
         color: white;
@@ -108,6 +116,7 @@
     }
     li {
         flex:1 1 auto; width:40%;
+        z-index: 4;
         a {
             color: red;
             text-decoration: underline;
