--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -1,21 +1,23 @@
 .animation {
     height: 500px;
 }
-
 .description {
     max-width: 800px;
-
-
 }
-
-.alert {
-    background: yellow;
-    width: 100%;
-    text-align: center;
-    margin: 20px auto 40px;
-    padding: 20px;
+.bg {
+  position: absolute;
 }
-
+.line {
+  position: absolute;
+  opacity: 0.15;
+  left:-206px;
+  top: -100px;
+}
+.triangle {
+  position: absolute;
+  bottom: -50px;
+  right: -40px;
+}
 @keyframes run {
     0% {
       left: 0;
@@ -38,7 +40,6 @@
       top: 0;    
     }
   }
-
   .lines {
     position: absolute;
     top: -120px;
@@ -49,49 +50,22 @@
 
 .heroimg {
     position: relative;
-    &::before{
-        content: "";
-        position: absolute;
-        top: -20px;
-        left: 20px;
-        width: 400px;
-        height: 400px;
-        background: #000;
-        background: linear-gradient(115deg, green 0%, blue 100%);
-        display: block;
-        animation: linear infinite;
-        animation-name: run;
-        animation-duration: 5s;
-    }
-    &::after{
-        content: "+++";
-        position: absolute;
-        bottom: 120px;
-        left: -30px;
-        font-size: 48px;
-        color: white;
-        animation: linear infinite;
-        animation-name: run;
-        animation-duration: 7s;
-    }
-    .plus {
-        position: absolute;
-        bottom: 80px;
-        left: 420px;
-        font-size: 48px;
-        color: white;
-        line-height: 48px;
-        animation: linear infinite;
-        animation-name: run2;
-        animation-duration: 5s;
-    }
 }
 
 .meh {
     position: relative;
     display: block;
     border-radius: 50%;
+}
 
+.button {
+  background: #fff;
+  height: 56px;
+  font-size: 24px;
+  color: rgb(18, 18, 18);
+  font-weight: 700;
+  padding: 0 24px;
+  cursor: pointer;
 }
 
 .twocol {
@@ -106,9 +80,17 @@
     }
     h1 {
         margin-bottom: 24px;
+        color: #fff;
     }
     p {
         margin-bottom: 24px;
+    }
+    .name {
+      font-weight: 700;
+      color: #fff;
+      font-size: 20px;
+      line-height: 20px;
+      margin-bottom: 20px;
     }
     ul {
         list-style: outside;
@@ -125,7 +107,32 @@
     }
 }
 
-// .main {
-//     max-width: 1200px;
-//     margin: 0 auto;
-// }
+@media screen and (max-width: 768px) {
+    .twocol {
+        flex-direction: column;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+        padding: 0 20px;
+        h1 {
+            font-size: 3.2rem;
+            line-height: 3.3rem;
+        }
+        .name {
+            font-size: 1rem;
+            line-height: 1rem;
+        }
+        .left, .right {
+            margin: 0 20px;
+            width: 100%;
+        }
+        .button {
+          height: 42px;
+          font-size: 18px;
+          color: rgb(18, 18, 18);
+          font-weight: 700;
+          padding: 0 18px;   
+        }
+    }
+    .triangle { display: none;}
+}
