--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,159 +1,97 @@
 .header {
-  display: flex;
   position: fixed;
-  z-index: 2;
-  bottom: 0;
+  z-index: 1;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 60px;
-  background: #000;
-
-  nav {
+  width: 100vw;
+  height: 120px;
+  background: rgb(18,18,18);
+  .headercontainer {
+    display: flex;
+    align-items: center;
+    width: 100vw;
+    height: 120px;
+    justify-content: space-between;
+    padding: 0 50px;
+    max-width: 1400px;
     margin: 0 auto;
-    ul.navul {
+    .logo {
+      font-family: 'Space Grotesk', monospace;
+      font-size: 32px;
+      font-weight: 700;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 0;
-      margin: 0;
-      list-style: none;
-
-      li {
-        margin: 0 10px;
-        font-size: 12px;
-        font-family: 'Syncopate', monospace;
-        text-transform: uppercase;
-        font-weight: 800;
-        // position: relative;
-        .iconcontainer {
-          &::before {
-            content: "";
-            background: #fff;
-            width: 50px;
-            height: 50px;
-            display: block;
-            border-radius: 50%;
-            z-index: -1;
-            position: absolute;
-            top: 0;
-            left: 0;
-          }
-          position: relative;
-          top: -25px;
-          // background: #fff;
-          width: 50px;
-          height: 50px;
-          border-radius: 50%;
-          margin: 0 auto;
-          svg {
-            z-index: 4;
-          }
-          z-index: 4;
-        }
-        .navLink {
-          position: relative;
-          top: -15px;
-          padding: 0px 10px;
-          color: #fff;
-          cursor: pointer;
-          transition: color 0.2s ease;
+      color: #fff;
+      span.guru {
+        opacity: 0.5;
+        margin-left: 4px;
+      }
+      .logoimg {
+        width: 80px;
+        height: 80px;
+        margin: 20px;
+        border-radius: 50%;
+      }    
+    }
+    nav {
+      ul.navul {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        li {
+          margin: 0 10px;
+          font-size: 18px;
+          font-family: 'Space Grotesk', monospace;
           text-transform: uppercase;
-          letter-spacing: .2em;
-          &.current {
-            color: yellow;
+          font-weight: 800;
+          a {
+            display: block;
+            .navLink {
+              padding: 0px 10px;
+              color: #fff;
+              cursor: pointer;
+              transition: color 0.2s ease;
+              text-transform: uppercase;
+              letter-spacing: .2em;
+              line-height: 120px;
+              height: 120px;
+              display: block;
+              border-bottom: 5px solid rgba(255,255,255,0);
+              transition: border-bottom 0.4s ease;
+              &.current {
+                border-bottom: 5px solid rgba(255,255,255,.5);
+              }
+            }
           }
         }
       }
     }
   }
-
-  .logo {
-    color: #fff;
-    position: absolute;
-    top: 18px;
-    left: 50px;
-    font-size: 18px;
-    font-weight: 800;
-    .red { color: red }
-    .blue { color: blue }
-    .green { color: green }
-    .yellow { color: yellow }
-    @media screen and (max-width: 768px) {
-      display: none;
+  @media screen and (max-width: 768px) {
+    height: 100px;
+    .headercontainer {
+      padding: 0 25px;
+      height: 100px;
+      .logo {
+        font-size: 24px;
+        span.guru, .logoimg {
+          display: none;
+        }
+      }
+      nav {
+        ul.navul {
+          li {
+            font-size: 14px;
+          }
+        }
+      }
     }
-      
+    
   }
-  .pacman {
-    position: absolute;
-    top: -25px;
-    height: 50px;
-    width: 50px;
-    transition: opacity 0.2s ease, left 0.5s ease;
-    z-index: 4;
-    &.right {
-      left: 0;
-    }
+  
 
-    &.left {
-      right: 0;
-    }
 
-    &.center {
-      display: none;
-    }
-  }
-
-  .pacmantop {
-    background-color: yellow;
-    height: 25px;
-    width: 50px;
-    border-radius: 27px 27px 0 0;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-
-  .pacmanbottom {
-    background-color: yellow;
-    height: 25px;
-    width: 50px;
-    border-radius: 0 0 27px 27px;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-
-  .pacmanleft .pacmantop {
-    animation-name: spin2;
-  }
-
-  .pacmanleft .pacmanbottom {
-    animation-name: spin1;
-  }
-
-  .pacmanright .pacmantop {
-    animation-name: spin1;
-  }
-
-  .pacmanright .pacmanbottom {
-    animation-name: spin2;
-  }
-}
-
-@keyframes spin1 {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(-35deg);
-  }
-}
-
-@keyframes spin2 {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(35deg);
-  }
 }
