--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -1,7 +1,7 @@
 .resume {
     padding: 30px 0 100px;
     max-width: 740px;
-    h3, h4, p, li {
+    h3, p, li {
         font-size: 1.2rem;
         margin-bottom: 12px;
     }
@@ -15,4 +15,10 @@
         color: blue;
         text-decoration: underline;
     }
+}
+
+
+.resume h4.testing {
+    color: blue;
+    font-size: 144px;
 }
