img size mobile

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -133,6 +133,10 @@
           font-weight: 700;
           padding: 0 18px;   
         }
+        .meh {
+          width: 400px;
+          height: 400px;
+        }
     }
     .triangle { display: none;}
 }
