--- a/styles/components/Layout.module.scss
+++ b/styles/components/Layout.module.scss
@@ -78,6 +78,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
+    // max-width: 1200px;
     margin: 0 auto;
   }
