--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -68,10 +68,19 @@
   cursor: pointer;
 }
 
+.twocolbg {
+  padding-top: 100px;
+  background: rgb(18,18,18);
+  background: linear-gradient(115deg, rgb(18,18,18) 55%, rgb(25,25,25) 70%, rgb(50,50,50) 100%);
+}
+
 .twocol {
+    max-width: 1200px;
     display: flex;
     height: calc( 100vh - 300px );
+    margin: 0 auto;
     align-items: center;
+    padding: 300px 50px 400px;
     .left, .right {
         flex:1 1 auto; width:40%;
     }
@@ -105,6 +114,58 @@
             font-size: 1.2rem;
         }
     }
+}
+
+.threecolbg {
+  background: rgb(18,18,18);
+  width: 100vw;
+}
+
+.threecol {
+  display: flex;
+  position: relative;
+  top: -50px;
+  max-width: 1200px;
+  margin: 0 auto;
+  h2 {
+    font-size: 28px;
+    line-height: 28px;
+    margin-top: 48px;
+  }
+  p {
+    margin-top: 16px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .left {
+    flex:1 1 auto; width:33%;
+  }
+  .middle {
+    flex:1 1 auto; width:33%;
+  }
+  .right {
+    flex:1 1 auto; width:33%;
+  }
+  .left, .middle, .right {
+    background: rgb(25,25,25);
+    color: rgb(248,248,248);
+    margin: 0 30px;
+    padding: 50px 40px;
+  }
+  .icon {
+    width: 64px;
+    height: 64px;
+    border: 1px solid #dedede;
+    display: flex;
+    align-items: center;
+  }
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    .left, .middle, .right {
+      margin: 0 20px;
+      width: calc(100% - 40px);
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
