--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -14,6 +14,7 @@
   }
 
 .app {
+    background: rgb(19,19,19);
     color: #000;
     font-family: 'Space Grotesk', monospace;
     font-weight: 400;
