--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -64,7 +64,12 @@
               &.current {
                 border-bottom: 5px solid rgba(255,255,255,.5);
               }
+              @media screen and (max-width: 768px) {
+                line-height: 100px;
+                height: 100px;
+              }
             }
+
           }
         }
       }
