--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -6,6 +6,10 @@
     h1 {
         font-size: 80px;
         line-height: 80px;
+        @media screen and (max-width: 768px) {
+                font-size: 3.2rem;
+                line-height: 3.3rem;
+        }
     }
     h3, p, li {
         font-size: 1.2rem;
@@ -69,7 +73,7 @@
             }
             ul {
                 max-width: 700px;
-                margin-bottom: 48px;
+                
                 li {
                     font-size: 28px;
                     line-height: 42px;
