--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -6,24 +6,38 @@
 }
 .bg {
   position: absolute;
+  animation: run 8s ease-in-out .01s  infinite;
 }
 .line {
   position: absolute;
   opacity: 0.15;
   left:-140px;
   top: -100px;
+  animation: run3 6s ease-in-out .01s  infinite;
 }
 .triangle {
   position: absolute;
   bottom: 0px;
   right: -50px;
+  animation: run2 10s ease-in-out .01s  infinite;
+}
+@keyframes run3 {
+  0% {
+    left: -100px;
+  }
+  50% {
+    left: -140px;
+  }
+  100% {
+    left: -100px;    
+  }
 }
 @keyframes run {
     0% {
       left: 0;
     }
     50% {
-      left: 100%;
+      left: 3%;
     }
     100% {
       left: 0;    
@@ -31,13 +45,13 @@
   }
   @keyframes run2 {
     0% {
-      top: 0;
+      bottom: 0;
     }
     50% {
-      top: 100%;
+      bottom: 5%;
     }
     100% {
-      top: 0;    
+      bottom: 0;    
     }
   }
   .lines {
@@ -46,6 +60,7 @@
     z-index: 0;
     right: 100px;
     height: 600px;
+    
   }
 
 .heroimg {
@@ -67,6 +82,9 @@
   font-weight: 700;
   padding: 0 24px;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .twocolbg {
@@ -212,6 +230,8 @@
           color: rgb(18, 18, 18);
           font-weight: 700;
           padding: 0 18px;   
+          display: flex;
+          justify-content: space-between;
         }
         .meh {
           width: 400px;
