--- a/styles/resume.module.scss
+++ b/styles/resume.module.scss
@@ -3,7 +3,9 @@
         padding-left: 16px;
     }
     padding: 130px 0 100px;
+    width: 100%;
     max-width: 1200px;
+    overflow: hidden;
     // background: rgb(19,19,19);
     color:#fff;
     .square {
@@ -32,7 +34,9 @@
     }
     ul ul {
         list-style: none;
-        li { position: relative; padding-left: 16px; // padding-right: 50px;}
+        li { position: relative; padding-left: 16px; 
+            // padding-right: 50px;
+        }
         li::before {
             content: "+";
             position: absolute;
