--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -19,6 +19,8 @@
     font-family: 'Space Grotesk', monospace;
     font-weight: 400;
     min-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
     p {
         font-family: 'Space Grotesk', monospace;
         font-weight: 400;
