--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -93,16 +93,18 @@
   &::before {
     content: '';
     position: absolute;
-    top: 0;
+    // top: 0;
     width: 500px;
     height: 500px;
+    left: calc(50% - 250px);
     background: url('/images/bg.svg') no-repeat;
     z-index: 0;
     @media screen and (max-width: 768px) {
-      top: 50px;
+      // top: 50px;
       width: 400px;
       height: 400px;
-      left: 0px;
+      left: calc(50% - 200px);
+      // left: 0px;
     }
   }
 }
@@ -152,7 +154,7 @@
     margin-left: 8px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .buttonmobile {
     display: flex;
   } 
@@ -165,7 +167,7 @@
   padding-top: 100px;
   background: rgb(18,18,18);
   background: linear-gradient(145deg, rgb(18,18,18) 55%, rgb(25,25,25) 70%, rgb(50,50,50) 100%);
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1024px) {
     padding-bottom: 100px;
   }
 }
@@ -177,6 +179,11 @@
     margin: 0 auto;
     align-items: center;
     padding: 300px 50px 400px;
+    @media screen and (min-width:768px) and (max-width: 1024px) {
+      padding: 200px 50px 0px;
+      // height: auto;
+      flex-direction: column;
+    }
     .left, .right {
         flex:1 1 auto; width:40%;
     }
@@ -257,10 +264,11 @@
   }
   @media screen and (max-width: 768px) {
     flex-direction: column;
-    .left, .middle, .right {
+    .left, .middle {
       margin: 0 20px;
       width: calc(100% - 40px);
     }
+    .right { width: calc(100% - 40px); }
   }
 }
 
@@ -268,7 +276,8 @@
   .twocol {
     flex-direction: column;
     height: auto;
-    padding: 150px 50px;
+    padding: 150px 50px 0;
+    
     .left, .right {
       width: 100%;
       .triangle { display: none}
@@ -300,6 +309,11 @@
         .left, .right {
             margin: 0 20px;
             width: 100%;
+        }
+        @media screen and (max-width: 768px) {
+          .right {
+            margin: 0;
+          }
         }
         // .button {
         //   height: 42px;
