added hamburger css icon and mobile menu styles

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -142,7 +142,7 @@
 }
 
 .buttonmobile {
-  background: #000;
+  background: rgba(255,255,255,.15);
   height: 42px;
   font-size: 18px;
   color: #fff;
