--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -3,14 +3,14 @@
     src: local("Space Grotesk Regular"),url('../public/fonts/space-grotesk/SpaceGrotesk-Regular.woff');
     font-weight: 400;
     text-rendering: optimizeLegibility;
-    font-display: swap
+    font-display: swap;
   }
   @font-face {
     font-family: "Space Grotesk";
     src: local("Space Grotesk Bold"),url('../public/fonts/space-grotesk/SpaceGrotesk-Bold.woff');
     font-weight: 700;
     text-rendering: optimizeLegibility;
-    font-display: swap
+    font-display: swap;
   }
 
 .app {
