--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -118,7 +118,7 @@
 }
 
 .button {
-  background: rgba(255,255,255,.15);
+  background: #000000;
   height: 42px;
   font-size: 18px;
         //   color: rgb(18, 18, 18);
@@ -142,7 +142,7 @@
 }
 
 .buttonmobile {
-  background: rgba(255,255,255,.15);
+  background: #000000;
   height: 42px;
   font-size: 18px;
   color: #fff;
@@ -286,7 +286,7 @@
     
     .left, .right {
       width: 100%;
-      .triangle { display: none}
+      .triangle { display: none; }
     }
   }
 }
