small style issue

--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -1,6 +1,8 @@
 .blog {
     padding-top: 150px;
     color:#fff;
+    overflow-x: hidden;
+    max-width: 100vw;
     .ulbg {
         width: 100vw;
         background: rgb(25,25,25);
