--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -112,9 +112,13 @@
 .meh {
     position: relative;
     display: block;
-    border-radius: 50%;
+    // border-radius: 100%;
+    // border-bottom-right-radius: 40%;
+    // border-bottom-left-radius: 40%;
     z-index: 1;
     margin: 0 auto;
+    width: 408;
+    height: 509;
 }
 
 .button {
@@ -331,8 +335,8 @@
         //   justify-content: space-between;
         // }
         .meh {
-          width: 400px;
-          height: 400px;
+          width: 278px;
+          height: 398px;
         }
     }
     .triangle { display: none;}
