--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -27,8 +27,9 @@
         margin-left: 4px;
       }
       .logoimg {
-        width: 80px;
-        height: 80px;
+        // width: 80px;
+        // height: 80px;
+        // background: #333;
         margin: 20px;
         border-radius: 50%;
       }    
