--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -1,7 +1,7 @@
 .blog {
     padding-top: 150px;
     color:#fff;
-    overflow-x: hidden;
+    overflow: hidden;
     max-width: 100vw;
     .ulbg {
         width: 100vw;
