--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -22,6 +22,7 @@
       display: flex;
       align-items: center;
       color: #fff;
+      z-index: 7;
       span.guru {
         opacity: 0.5;
         margin-left: 4px;
