update contact button

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -135,6 +135,7 @@
   padding: 0 24px 0 12px;
   cursor: pointer;
   display: flex;
+  width: 300px;
   justify-content: space-between;
   border-radius:8px;
   align-items: center;
